Fix Quick search on Firefox and avatar alignment

--- a/src/components/dpmsgAvatarHeadsList.css
+++ b/src/components/dpmsgAvatarHeadsList.css
@@ -22,5 +22,5 @@
 }
 
 .dpmsg-AvatarHeadsIcon:first-child {
-  margin-left: -12px;
+  margin-left: -6px;
 }
