--- a/src/components/dpmsgQuickSearch.css
+++ b/src/components/dpmsgQuickSearch.css
@@ -43,6 +43,12 @@
   }
 }
 
+@supports (-moz-appearance:none) {
+  .dpmsg-QuickSearchControl .dpmsg-QuickSearchControl--label {
+    top: 18px;
+  }
+}
+
 .dpmsg-QuickSearchResults {
   margin-top: 7px;
 
